--- a/index.css
+++ b/index.css
@@ -1,8 +1,72 @@
 body {
-  margin-left: 20%;
-  margin-right: 20%;
+  justify-content: center;
+  align-items: center;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  min-height: 100vh;
+}
+
+.list {
+  padding: 1% 75px 10px 30px;
   position: relative;
-  /* margin: 20%; */
+  background: #fff4f6;
+  border-top: 50px solid #ddb7be;
+}
+
+.list label {
+  position: relative;
+  display: block !important;
+  margin: 40px 20%;
+  color: rgb(122, 69, 69);
+  font-size: 20px;
+  cursor: pointer;
+  font-weight: lighter;
+}
+
+.list input[type="checkbox"] {
+  -webkit-appearance: none;
+}
+
+.list i {
+  position: absolute;
+  top: 2px;
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  border: 2px solid rgb(122, 69, 69);
+}
+
+.list input[type="checkbox"]:checked ~ i {
+  top: 1px;
+  border-top: none;
+  border-right: none;
+  width: 25px;
+  height: 15px;
+  transform: rotate(-45deg);
+}
+
+.list span {
+  position: relative;
+  left: 40px;
+  transition: 0.5s;
+}
+
+.list span:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background: rgb(122, 69, 69);
+  transform: translateY(60%) scaleX(0);
+  transform-origin: right;
+  transition: transform 0.5s;
+}
+
+.list input[type="checkbox"]:checked ~ span:before {
+  transform: translateY(60%) scaleX(1);
+  transform-origin: right;
+  transition: transform 0.5s;
 }
 
 .jumbotron {
