--- a/index.css
+++ b/index.css
@@ -9,17 +9,21 @@ body {
   padding: 1% 75px 10px 30px;
   position: relative;
   background: #fff4f6;
-  border-top: 50px solid #ddb7be;
+  overflow-wrap: break-word;
 }
 
 .list label {
   position: relative;
   display: block !important;
-  margin: 40px 20%;
+  margin: 40px 15%;
   color: rgb(122, 69, 69);
-  font-size: 20px;
+  font-size: 18px;
   cursor: pointer;
   font-weight: lighter;
+  border: 0.5px solid #ddb7be;
+  border-radius: 3px;
+  border-spacing: 5px;
+  overflow-wrap: break-word;
 }
 
 .list input[type="checkbox"] {
