--- a/index.css
+++ b/index.css
@@ -8,19 +8,19 @@ body {
 .list {
   padding: 1% 75px 10px 30px;
   position: relative;
-  background: #fff4f6;
+  background: #f1e4da;
   overflow-wrap: break-word;
 }
 
 .list label {
   position: relative;
   display: block !important;
-  margin: 40px 15%;
-  color: rgb(122, 69, 69);
+  margin: 3% 20%;
+  color: rgb(95, 95, 95);
   font-size: 18px;
   cursor: pointer;
   font-weight: lighter;
-  border: 0.5px solid #ddb7be;
+  /* border: 0.5px solid #fff; */
   border-radius: 3px;
   border-spacing: 5px;
   overflow-wrap: break-word;
@@ -32,11 +32,11 @@ body {
 
 .list i {
   position: absolute;
-  top: 2px;
+  top: 3px;
   display: inline-block;
-  width: 25px;
-  height: 25px;
-  border: 2px solid rgb(122, 69, 69);
+  width: 20px;
+  height: 20px;
+  border: 1.5px solid #ffffff;
 }
 
 .list input[type="checkbox"]:checked ~ i {
@@ -80,7 +80,7 @@ body {
   background-position-y: 15%;
   background-repeat: no-repeat;
   text-align: center;
-  background-color: rgb(241, 224, 224, 0.7) !important;
+  background-color: #f1e4da !important;
 }
 
 .lead {
