--- a/views/index.css
+++ b/views/index.css
@@ -26,6 +26,10 @@ body {
   overflow-wrap: break-word;
 }
 
+.list label:hover {
+  background: rgba(0, 0, 0, 0.1);
+}
+
 .list input[type="checkbox"] {
   -webkit-appearance: none;
 }
@@ -55,7 +59,7 @@ body {
 }
 
 .list span:before {
-  content: "";
+  /* content: "";
   position: absolute;
   top: 50%;
   left: 0;
@@ -64,13 +68,19 @@ body {
   background: rgb(122, 69, 69);
   transform: translateY(60%) scaleX(0);
   transform-origin: right;
-  transition: transform 0.5s;
+  transition: transform 0.5s; */
+  text-decoration: line-through;
 }
 
 .list input[type="checkbox"]:checked ~ span:before {
   transform: translateY(60%) scaleX(1);
   transform-origin: right;
   transition: transform 0.5s;
+  text-decoration: line-through;
+}
+
+.list input[type="checkbox"]:checked ~ span {
+  text-decoration: line-through;
 }
 
 .jumbotron {
