example name worked

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>ToDoMoew</title>
+    <title>TodoMoew</title>
     <script
       src="https://code.jquery.com/jquery-1.12.3.min.js"
       integrity="sha384-ugqypGWrzPLdx2zEQTF17cVktjb01piRKaDNnbYGRSxyEoeAm+MKZVtbDUYjxfZ6"
@@ -75,8 +75,15 @@
               placeholder="What are your goals today?"
             />
           </div>
-          <!-- <a class="btn btn-info btn-lg pawBtn" href="#" role="button">ADD</a> -->
-          <button type="submit">Add</button>
+          <button
+            type="submit"
+            class="btn btn-info btn-lg pawBtn"
+            href="#"
+            role="button"
+          >
+            ADD
+          </button>
+          <!-- <button type="submit">Add</button> -->
         </form>
       </div>
     </div>
@@ -95,6 +102,9 @@
         ><br />
       </div>
     </div> -->
+
+    <h1><%= name %></h1>
+
     <div class="list">
       <label>
         <input type="checkbox" name="" />
