--- a/views/index.css
+++ b/views/index.css
@@ -57,9 +57,9 @@ body {
   left: 40px;
   transition: 0.5s;
 }
-
+/* 
 .list span:before {
-  /* content: "";
+  content: "";
   position: absolute;
   top: 50%;
   left: 0;
@@ -68,16 +68,14 @@ body {
   background: rgb(122, 69, 69);
   transform: translateY(60%) scaleX(0);
   transform-origin: right;
-  transition: transform 0.5s; */
-  text-decoration: line-through;
+  transition: transform 0.5s;
 }
 
 .list input[type="checkbox"]:checked ~ span:before {
-  transform: translateY(60%) scaleX(1);
+ transform: translateY(60%) scaleX(1);
   transform-origin: right;
-  transition: transform 0.5s;
-  text-decoration: line-through;
-}
+  transition: transform 0.5s; 
+} */
 
 .list input[type="checkbox"]:checked ~ span {
   text-decoration: line-through;
@@ -108,5 +106,62 @@ h1 {
   border-color: #f8bac5 !important;
   border-width: 2pt !important;
   background-image: url("paw.png") !important;
+}
+
+.btn-info:clicked {
+  background-color: #ee9ca8 !important;
+  border-color: #f4acb7 !important;
+  border-width: 2pt !important;
+  background-image: url("paw.png") !important;
   color: grey;
+}
+
+.push_button {
+  position: relative;
+  width: 220px;
+  height: 40px;
+  text-align: center;
+  color: #fff;
+  text-decoration: none;
+  line-height: 43px;
+  font-family: "Oswald", Helvetica;
+  display: block;
+  margin: 30px;
+}
+.button:before {
+  background: #f0f0f0;
+  background-image: -webkit-gradient(
+    linear,
+    0% 0%,
+    0% 100%,
+    from(#d0d0d0),
+    to(#f0f0f0)
+  );
+
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5) inset, 0 1px 0 #fff;
+  -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5) inset, 0 1px 0 #fff;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5) inset, 0 1px 0 #fff;
+
+  position: absolute;
+  content: "";
+  left: -6px;
+  right: -6px;
+  top: -6px;
+  bottom: -10px;
+  z-index: -1;
+}
+
+.button:active {
+  -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset,
+    0 -1px 0 rgba(255, 255, 255, 0.1) inset;
+  top: 5px;
+}
+.button:active:before {
+  top: -11px;
+  bottom: -5px;
+  content: "";
 }
