--- a/views/index.ejs
+++ b/views/index.ejs
@@ -65,7 +65,7 @@
           Get your tasks done with cats!
         </p>
         <hr class="my-4" />
-        <form id="contact-form" method="POST" action="/tasks">
+        <form id="form input" method="POST" action="/">
           <div class="form-group">
             <input
               type="text"
@@ -87,55 +87,17 @@
         </form>
       </div>
     </div>
-    <!-- <button class="btn btn-default">
-      <img src="paw.png" width="20" />
-      Sign In
-    </button> -->
-
-    <!-- <div class="mx-auto" style="width: 40%;">
-      <div class="custom-control custom-checkbox">
-        <input type="checkbox" class="custom-control-input" id="customCheck1" />
-        <label class="custom-control-label" for="customCheck1">MyTask1</label
-        ><br />
-
-        <label class="custom-control-label" for="customCheck2">MyTask2</label
-        ><br />
-      </div>
-    </div> -->
-
-    <h1><%= name %></h1>
 
     <div class="list">
+      <% for(var i=0; i < tasks.length; i++) { %>
       <label>
         <input type="checkbox" name="" />
         <i></i>
-        <span> task1</span>
+        <span><%= tasks[i].task %></span>
       </label>
-
-      <label>
-        <input type="checkbox" name="" />
-        <i></i>
-        <span> task2</span>
-      </label>
-      <label>
-        <input type="checkbox" name="" />
-        <i></i>
-        <span> task3</span>
-      </label>
-      <label>
-        <input type="checkbox" name="" />
-        <i></i>
-        <span> tasktasktasktasktasktasktask</span>
-      </label>
-      <label>
-        <input type="checkbox" name="" />
-        <i></i>
-        <span>
-          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua.</span
-        >
-      </label>
+      <%}%>
     </div>
+
     <script src="js/scripts.js"></script>
   </body>
 </html>
