--- a/views/index.css
+++ b/views/index.css
@@ -106,62 +106,19 @@ h1 {
   border-color: #f8bac5 !important;
   border-width: 2pt !important;
   background-image: url("paw.png") !important;
+  outline: 0pt !important;
 }
 
-.btn-info:clicked {
+.btn-info:hover {
   background-color: #ee9ca8 !important;
   border-color: #f4acb7 !important;
   border-width: 2pt !important;
   background-image: url("paw.png") !important;
-  color: grey;
 }
 
-.push_button {
-  position: relative;
-  width: 220px;
-  height: 40px;
-  text-align: center;
-  color: #fff;
-  text-decoration: none;
-  line-height: 43px;
-  font-family: "Oswald", Helvetica;
-  display: block;
-  margin: 30px;
-}
-.button:before {
-  background: #f0f0f0;
-  background-image: -webkit-gradient(
-    linear,
-    0% 0%,
-    0% 100%,
-    from(#d0d0d0),
-    to(#f0f0f0)
-  );
-
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-
-  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5) inset, 0 1px 0 #fff;
-  -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5) inset, 0 1px 0 #fff;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5) inset, 0 1px 0 #fff;
-
-  position: absolute;
-  content: "";
-  left: -6px;
-  right: -6px;
-  top: -6px;
-  bottom: -10px;
-  z-index: -1;
-}
-
-.button:active {
-  -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset,
-    0 -1px 0 rgba(255, 255, 255, 0.1) inset;
-  top: 5px;
-}
-.button:active:before {
-  top: -11px;
-  bottom: -5px;
-  content: "";
+.btn-info:focus {
+  background-color: #ffdde2 !important;
+  border-color: #d6949d !important;
+  border-width: 2pt !important;
+  outline: 0pt !important;
 }
